--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,9 +1,14 @@
+*
+{
+  box-sizing: border-box;
+}
 html {
   font-size: 62.5%;
 }
 
 body {
   font-family: Helvetica, Arial, sans-serif;
+  color:$dark-grey;
   font-size: $m-size;
 }
 
