--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,9 @@
 // Colors
+$dark-grey:#333;
+$blue:#1c88bf;
+$grey:grey;
+$off-white:#f7f7f7;
+$dark-blue:#364051;
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
